--- a/SonarCloud/Tests/Tests.csproj
+++ b/SonarCloud/Tests/Tests.csproj
@@ -7,21 +7,22 @@
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
-
-    <!-- Coverlet configuration -->
-    <CollectCoverage>true</CollectCoverage>
-    <CoverletOutput>$(MSBuildProjectDirectory)/results/coverage</CoverletOutput>
-    <CoverletOutputFormat>opencover,cobertura</CoverletOutputFormat>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="coverlet.msbuild" Version="6.0.2">
+    <!-- xUnit -->
+    <PackageReference Include="xunit" Version="2.5.3" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
 
+    <!-- Test SDK -->
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
-    <PackageReference Include="xunit" Version="2.5.3" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
+
+    <!-- Coverlet (MSBuild) -->
+    <PackageReference Include="coverlet.msbuild" Version="6.0.2">
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
