Update SonarCloudDemo.yml for Azure Pipelines

--- a/.azure/SonarCloudDemo.yml
+++ b/.azure/SonarCloudDemo.yml
@@ -17,7 +17,7 @@ steps:
 - task: SonarCloudPrepare@3
   inputs:
     SonarQube: 'azure-devops'                 # Azure DevOps service connection name
-    organization: 'vaishnavira-cybage'      # SonarCloud org key (NO spaces)
+    organization: 'vaishnavira-cybage'       # SonarCloud org key (NO spaces)
     scannerMode: 'dotnet'
     projectKey: 'vaishnavira-cybage_SonarCloudDemo'
     projectName: 'SonarCloudDemo'
@@ -38,10 +38,11 @@ steps:
 # Test + Coverage
 # ------------------------------------
 - task: DotNetCoreCLI@2
+  displayName: 'Run Tests with Coverage'
   inputs:
     command: 'test'
     projects: 'SonarCloud/Tests/Tests.csproj'
-    arguments: '--configuration Release'
+    arguments: '--configuration Release /p:CollectCoverage=true /p:CoverletOutput=$(Build.SourcesDirectory)/SonarCloud/Tests/results/coverage /p:CoverletOutputFormat=opencover,cobertura'
     publishTestResults: true
 
 # ------------------------------------
@@ -61,7 +62,7 @@ steps:
 # ------------------------------------
 # Publish Coverage to Azure DevOps
 # ------------------------------------
-- task: PublishCodeCoverageResults@1
+- task: PublishCodeCoverageResults@2
   inputs:
     codeCoverageTool: 'Cobertura'
     summaryFileLocation: '$(Build.SourcesDirectory)/SonarCloud/Tests/results/coverage.cobertura.xml'
