Update SonarCloudDemo.yml for Azure Pipelines

--- a/.azure/SonarCloudDemo.yml
+++ b/.azure/SonarCloudDemo.yml
@@ -62,8 +62,11 @@ steps:
 # ------------------------------------
 # Publish Coverage to Azure DevOps
 # ------------------------------------
-- task: PublishCodeCoverageResults@2
+- task: DotNetCoreCLI@2
+  displayName: 'Run Tests with Coverage'
   inputs:
-    codeCoverageTool: 'Cobertura'
-    summaryFileLocation: '$(Build.SourcesDirectory)/SonarCloud/Tests/results/coverage.cobertura.xml'
-    failIfCoverageEmpty: true
+    command: 'test'
+    projects: 'SonarCloud/Tests/Tests.csproj'
+    arguments: '--configuration Release /p:CollectCoverage=true /p:CoverletOutput=$(Build.SourcesDirectory)/SonarCloud/Tests/results/coverage.xml /p:CoverletOutputFormat=cobertura'
+    publishTestResults: true
+
