Update SonarCloudDemo.yml for Azure Pipelines

--- a/.azure/SonarCloudDemo.yml
+++ b/.azure/SonarCloudDemo.yml
@@ -6,27 +6,36 @@ pool:
 
 steps:
 # ------------------------------------
-# Checkout
+# Checkout the repo
 # ------------------------------------
 - checkout: self
   fetchDepth: 0
+
+# ------------------------------------
+# Install .NET 8 SDK (optional, ensures correct version)
+# ------------------------------------
+- task: UseDotNet@2
+  inputs:
+    packageType: 'sdk'
+    version: '8.0.x'
 
 # ------------------------------------
 # SonarCloud Prepare
 # ------------------------------------
 - task: SonarCloudPrepare@3
   inputs:
-    SonarQube: 'azure-devops'                 # Azure DevOps service connection name
+    SonarQube: 'azure-devops'                 # Your service connection name
     organization: 'vaishnavira-cybage'       # SonarCloud org key (NO spaces)
     scannerMode: 'dotnet'
     projectKey: 'vaishnavira-cybage_SonarCloudDemo'
     projectName: 'SonarCloudDemo'
     extraProperties: |
       sonar.scanner.scanAll=false
+      # Must match Coverlet output file
       sonar.cs.opencover.reportsPaths=$(Build.SourcesDirectory)/SonarCloud/Tests/results/coverage.opencover.xml
 
 # ------------------------------------
-# Build
+# Build the solution
 # ------------------------------------
 - task: DotNetCoreCLI@2
   inputs:
@@ -35,14 +44,18 @@ steps:
     arguments: '--configuration Release'
 
 # ------------------------------------
-# Test + Coverage
+# Run tests + generate coverage
 # ------------------------------------
 - task: DotNetCoreCLI@2
   displayName: 'Run Tests with Coverage'
   inputs:
     command: 'test'
     projects: 'SonarCloud/Tests/Tests.csproj'
-    arguments: '--configuration Release /p:CollectCoverage=true /p:CoverletOutput=$(Build.SourcesDirectory)/SonarCloud/Tests/results/coverage /p:CoverletOutputFormat=opencover,cobertura'
+    arguments: >
+      --configuration Release
+      /p:CollectCoverage=true
+      /p:CoverletOutput=$(Build.SourcesDirectory)/SonarCloud/Tests/results/coverage.opencover.xml
+      /p:CoverletOutputFormat=opencover
     publishTestResults: true
 
 # ------------------------------------
@@ -60,13 +73,11 @@ steps:
     pollingTimeoutSec: '300'
 
 # ------------------------------------
-# Publish Coverage to Azure DevOps
+# Publish coverage to Azure DevOps
 # ------------------------------------
-- task: DotNetCoreCLI@2
-  displayName: 'Run Tests with Coverage'
+- task: PublishCodeCoverageResults@2
+  displayName: 'Publish Code Coverage Results'
   inputs:
-    command: 'test'
-    projects: 'SonarCloud/Tests/Tests.csproj'
-    arguments: '--configuration Release /p:CollectCoverage=true /p:CoverletOutput=$(Build.SourcesDirectory)/SonarCloud/Tests/results/coverage.xml /p:CoverletOutputFormat=cobertura'
-    publishTestResults: true
-
+    summaryFile: '$(Build.SourcesDirectory)/SonarCloud/Tests/results/coverage.opencover.xml'
+    reportDirectory: '$(Build.SourcesDirectory)/SonarCloud/Tests/results'
+    failIfCoverageEmpty: true
