Update SonarCloudDemo.yml for Azure Pipelines

--- a/.azure/SonarCloudDemo.yml
+++ b/.azure/SonarCloudDemo.yml
@@ -78,6 +78,6 @@ steps:
 - task: PublishCodeCoverageResults@2
   displayName: 'Publish Code Coverage Results'
   inputs:
-    summaryFile: '$(Build.SourcesDirectory)/SonarCloud/Tests/results/coverage.opencover.xml'
-    reportDirectory: '$(Build.SourcesDirectory)/SonarCloud/Tests/results'
+    codeCoverageTool: 'Cobertura'   # required
+    summaryFileLocation: '$(Build.SourcesDirectory)/SonarCloud/Tests/results/coverage.opencover.xml'
     failIfCoverageEmpty: true
