Update SonarCloudDemo.yml for Azure Pipelines

--- a/.azure/SonarCloudDemo.yml
+++ b/.azure/SonarCloudDemo.yml
@@ -81,3 +81,10 @@ steps:
     codeCoverageTool: 'Cobertura'   # required
     summaryFileLocation: '$(Build.SourcesDirectory)/SonarCloud/Tests/results/coverage.opencover.xml'
     failIfCoverageEmpty: true
+
+- task: PublishBuildArtifacts@1
+  displayName: 'Publish Coverage Files'
+  inputs:
+    PathtoPublish: '$(Build.SourcesDirectory)/SonarCloud/Tests/results'
+    ArtifactName: 'CodeCoverage'
+    publishLocation: 'Container'
